# libclo

./: Makefile  Makefile.am  README.md  clo.c  clo.h  configure.ac  index.html  params.json
.github/workflows/: c-cpp.yml  codeql.yml
example/: hello.c
src/: clo.c  clo.h
test/: clo.c  coverage.sh  valgrind.sh
